RESOLVED FIXED83778
[chromium] Fix threaded compositor HUD crash
https://bugs.webkit.org/show_bug.cgi?id=83778
Summary [chromium] Fix threaded compositor HUD crash
Sami Kyostila
Reported 2012-04-12 06:39:49 PDT
[chromium] Fix threaded compositor HUD crash
Attachments
Patch (1.74 KB, patch)
2012-04-12 06:43 PDT, Sami Kyostila
no flags
Sami Kyostila
Comment 1 2012-04-12 06:43:33 PDT
WebKit Review Bot
Comment 2 2012-04-12 10:17:03 PDT
Comment on attachment 136893 [details] Patch Clearing flags on attachment: 136893 Committed r114000: <http://trac.webkit.org/changeset/114000>
WebKit Review Bot
Comment 3 2012-04-12 10:17:07 PDT
All reviewed patches have been landed. Closing bug.
Alex Nicolaou
Comment 4 2012-04-12 10:27:23 PDT
Sorry for introducing this bug - should have seen it when I did the merge with the other refactoring - but also, it would be simpler and just as good to just hardcode a 50 instead of 40 and ignore the font size in all cases.
Sami Kyostila
Comment 5 2012-04-12 10:38:23 PDT
Right. I wasn't sure why the font size was being included in the height, since here the fps counter is drawn to the left of the graph instead of on top of it. Feel free to bump this to 50 if that is closer to the intended effect.
Shawn Singh
Comment 6 2012-04-12 10:41:21 PDT
FYI I'm about to clobber the font rendering code anyway, so that the HUD can work in multithreaded mode =) I had a nice layout that I think you'll like, otherwise feel free to adjust it afterwards
Note You need to log in before you can comment on or make changes to this bug.