[chromium] Fix threaded compositor HUD crash https://bugs.webkit.org/show_bug.cgi?id=83778

Patch by Sami Kyostila <skyostil@chromium.org> on 2012-04-12
Reviewed by James Robinson.

Don't try to read font metrics in threaded compositing mode, since we
currently can't render HUD text with the threaded compositor.

HUD is not testable in WebKit.

* platform/graphics/chromium/cc/CCHeadsUpDisplay.cpp:
(WebCore::CCHeadsUpDisplay::drawHudContents):

Canonical link: https://commits.webkit.org/101295@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114000 268f45cc-cd09-0410-ab3c-d52691b4dbfc